turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:49: error: type mismatch;
 found   : Array[Int]
 required: Array[Array[Array[Int]]]
	rule = new Array[Int](10)
               ^